# aisim

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: coverage.yml  lint.yml  publish.yml  pytest.yml  python-publish.yml  test.yml  workflow.yml
aisim/: __init__.py  _version.py  atoms.py  beam.py  const.py  convert.py  det.py  dist.py  grid.py  prop.py  sims.py  zern.py
docs/: CONTRIBUTING.rst  aisim.rst  conf.py  dev.rst  index.rst  install.rst  requirements.txt  usage.rst
docs/examples/: basic-usage.ipynb  box-pulse.ipynb  multiport-ai.ipynb  rabi-oscillations.ipynb  wavefront-aberrations.ipynb
docs/examples/data/: experimental_data.json  wavefront.txt  wf_grav_data.csv  wf_window5.txt
examples/: README.ipynb  wavefront-aberrations.ipynb
examples/data/: wf_window2.txt
tests/: atoms_test.py  beam_test.py  convert_test.py  det_test.py  prop_test.py  wf_test.py  zern_test.py
