[build-system]
requires = ["setuptools >= 75.8.0", "wheel", "setuptools_scm[toml]>=8.1.0"]

[project]
name = "aisim"
description = "Simulations for light-pulse atom interferometry"
authors = [
    { name = "Bastian Leykauf" },
    { email = "leykauf@physik.hu-berlin.de" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.26.4,<3.0.0",
    "scipy>=1.15.1,<2.0",
    "matplotlib>=3.9.4,<4.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.9",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "setuptools_scm>=8.1.0",
]
docs = [
    "sphinx>=8.2.1",
    "nbsphinx>=0.9.6",
    "pygments>=2.4",
    "sphinx_rtd_theme>=3.0.2",
]

[tool.setuptools_scm]

[project.urls]
homepage = "https://github.com/bleykauf/aisim/"
repository = "https://github.com/bleykauf/aisim/"
