[metadata]
name = aisim
description = Simulations for light-pulse atom interferometry
url = https://github.com/bleykauf/aisim
author = Bastian Leykauf
author_email = leykauf@physik.hu-berlin.de
maintainer = Bastian Leykauf
maintainer_email = leykauf@physik.hu-berlin.de
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
python_requires = >= 3.4
setup_requires =
    setuptools >= 38.3.0
install_requires = 
    numpy
    matplotlib
    scipy
packages = find:


[versioneer]
VCS = git
style = pep440
versionfile_source = aisim/_version.py
versionfile_build = aisim/_version.py
tag_prefix =
parentdir_prefix = aisim-

[flake8]
docstring-convention = numpy
per-file-ignores =
    tests/*: D103, D100